--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,5 +11,6 @@
     
     <div id="root"></div>
 
+    <script src="https://kit.fontawesome.com/059e520a91.js" crossorigin="anonymous"></script> 
   </body>
 </html>
