--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Reseau Social entre collègues" />
+
+    <link rel="icon" href="./img/favicon.ico" />
  
     <title>Goupomania</title>
   </head>
